--- a/README
+++ b/README
@@ -4,3 +4,4 @@ this is GitHub repository of student project AudioVideoCommunicator.
 Edited by Zglicz.
 ~Nireus
 Nicole
+~Gauee: Czemu nie updatujecie Trello.com!
